--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,4 +18,6 @@
     <br>
 <p><b><i>enjoy in my webb</i></b></p>
 
+<a href="http://127.0.0.1:5500/HTML/images.html" target="_blank">untuk kembali ke images</a>
+
  </html>
