[FEAT] submit table html challenges

--- a/CHALLENGS/table.html
+++ b/CHALLENGS/table.html
@@ -1,6 +1,6 @@
 <h2> TABLE GRADE C </h2>
 
-<table border="10">
+<table border="10" style="text-align: center;">
     <thead style="color: brown;">
         <tr>
             <th>Hari</th>
