--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY WEBSITE</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
 </body>
-<h1>HTML: INTRODUCTION</h1>
+<h1 id="formatting">HTML: INTRODUCTION</h1>
 <p>HALO! SELAMAT DATANG DI WEB BARU KUU</p>
 <p>kami dimulai dengan satu tujuan: menghadirkan yang terbaik untukmu.</p>
 <p>semangattttt semoga berhasilllll</p>
 <p>File pertama HTML adalah</p>
-<p><h2>RUMUS MATEMATIKA</h1></p>
+<p><h2 id="header">RUMUS MATEMATIKA</h1></p>
     <P>Persegi panjang= panjang x lebar (p x l)</P>
     <br>
 <p><b><i>enjoy in my webb</i></b></p>
